<resources>

    <string name="app_name">Reader</string>
    <string name="welcome">Welcome to Reader</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_home">Reader</string>
    <string name="reader_logo">Reader Logo</string>
    <string name="scan_image">Scan Image</string>
    <string name="image_preview">Preview:</string>
    <string name="load_image">Load image</string>

</resources>